# StackedFilters_C

./: .gitignore  CMakeLists.txt  CallFromC.c
include/: codecpp.hpp
libs/: libCallFromC
src/: CMakeLists.txt
src/Main/: CallFromC.c  Example.cpp
src/include/BloomFilter/: BloomFilterLayer.h
src/include/CallFromC/: codecpp.cpp  codecpp.hpp
src/include/CuckooFilter/: CuckooFilterLayer.h
src/include/QuotientFilter/: CQFilterLayer.h
src/include/StackedFilter/: InterfaceAMQ.h  StackedFilter.h
